--- a/example/index.html
+++ b/example/index.html
@@ -8,15 +8,16 @@
 </head>
 <body>
   <h1>Service Worker Example</h1>
-  <div>
-    <label>js.png (image exists)</label>
+  <div class="box">
+    <label>js.png (this image exists so it should render fine and store in cache)</label>
     <img data-src="./images/js.png" />
   </div>
-  <div>
-    <label>idontexist.png (image doesn't exist so should render default image)</label>
+  <div class="box">
+    <label>idontexist.png (this image doesn't exist so it should render default image set by service worker)</label>
     <img data-src="./images/idontexist.png" />
   </div>
 
   <script src="./scripts/index.js"></script>
+  <a href="https://github.com/miguelmota/service-worker-example" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
 </body>
 </html>
